# chroma_utils

./: .gitmodules  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  adat-config.in  configure  configure.ac  description  index.html  params.json
docs/: adat_threept_api.tex
lib/: Makefile.am  Makefile.in
lib/adat/: adat_arraynd.h  adat_arrays.h  adat_stopwatch.cc  adat_stopwatch.h  funcmap.h  handle.h  map_obj.h  map_traits.cc  map_traits.h  objfactory.h  objfunctor.h  ordered_map_obj.h  proginfo.cc  proginfo.h  singleton.h  typeinfo.h  typelist.h  typemanip.h  typetraits.h
lib/covfit/: BaseFitter.cc  CovarMat.cc  FitParams_io.cc  FitParams_io.h  Fitter.cc  FpiParams_io.cc  FpiParams_io.h  Function.h  adat_lapack.h  coFitter.cc  covarmat.h  fitter.h  function_switchboard.cc  jackknife.h  lapack_wrapper.h  proplist.cc  proplist.h  statistics.h
lib/covfit/fitters/: BaryonFfunc.h  BaryonSfunc.h  Lookup.h  boundmom.h  chiPT_fKofPi.h  chiPT_mKomPi.h  chiPTfp.h  chiPTgA.h  chiPTlog.h  expon.h  expon_altern.h  exponaper.h  exponaper_bar.h  exponper.h  exponper_altern.h  exponper_altern_onemass.h  exponper_subtr.h  fitfunctions.h  gAJfunc.h  gAKfunc.h  polynomium.h
lib/ensem/: ensem.h  ensem_ensem.h  ensem_forward.h  ensem_io.cc  ensem_io.h  ensem_newops.h  ensem_obsantisym.h  ensem_observable.h  ensem_obsmatrix.h  ensem_obsscalar.h  ensem_obstensor.h  ensem_obsvector.h  ensem_operator_tags.h  ensem_params.h  ensem_precision.h  ensem_primcolormat.h  ensem_primcolorvec.h  ensem_primgamma.h  ensem_primitive.h  ensem_primmatrix.h  ensem_primscalar.h  ensem_primseed.h  ensem_primspinmat.h  ensem_primspinvec.h  ensem_primvector.h  ensem_random.cc  ensem_random.h  ensem_reality.h  ensem_scalar_specific.h  ensem_scalarsite_defs.h  ensem_simpleword.h  ensem_specializations.h  ensem_traits.h  ensem_type_computations.h  ensem_xmlio.cc
lib/formfac/: formfac.h  formfac_bb.cc  formfac_bb.h  formfac_chisqq.cc  formfac_chisqq.h  formfac_data_covar.cc  formfac_data_covar.h  formfac_ensem_linfit.cc  formfac_ensem_linfit.h  formfac_ensemble.cc  formfac_ensemble.h  formfac_linear_covar_genfit.cc  formfac_linear_covar_genfit.h  formfac_manage.cc  formfac_manage.h  formfac_manage_2pt.cc  formfac_manage_2pt.h  formfac_manage_2pt_key.cc  formfac_manage_2pt_key.h  formfac_manage_2pt_stripped.cc  formfac_manage_2pt_stripped.h  formfac_manage_3pt.cc  formfac_manage_3pt.h  formfac_manage_3pt_db.cc  formfac_manage_3pt_db.h  formfac_manage_3pt_key.cc  formfac_manage_3pt_key.h  formfac_manage_E.cc  formfac_manage_E.h  formfac_manage_E_key.cc  formfac_manage_E_key.h  formfac_manage_E_stripped.cc  formfac_manage_E_stripped.h  formfac_manage_Z.cc  formfac_manage_Z.h  formfac_manage_Z_key.cc  formfac_manage_Z_key.h  formfac_manage_Z_stripped.cc  formfac_manage_Z_stripped.h  formfac_manage_aggregate.cc  (+26 more)
lib/formfac/do_not_use/: formfac_manage_3pt_bb.cc  formfac_manage_3pt_bb.h  formfac_manage_3pt_cache.cc  formfac_manage_3pt_cache.h  formfac_manage_3pt_stripped.cc  formfac_manage_3pt_stripped.h
lib/io/: adat_byteorder.cc  adat_byteorder.h  adat_crc32.cc  adat_io.cc  adat_io.h  adat_util.h  adat_xml_group_reader.cc  adat_xml_group_reader.h  adat_xmlio.cc  adat_xmlio.h  key_val_db.h  old_key_val_db.h
lib/io/do_not_use/: adat_qdpio.cc  adat_qdpio.h
lib/parton/: parton_correlation_functions.h  parton_correlation_functions_1.cc  parton_correlation_functions_2.cc  parton_derivatives.cc  parton_derivatives.h  parton_distribution_moments.cc  parton_distribution_moments.h  parton_renormalization_factors.cc  parton_renormalization_factors.h
lib/recipes/: brent.cc  dawson.cc  factrl.cc  gammln.cc  gammp.cc  gammq.cc  gcf.cc  gser.cc  mnbrak.cc  mnewt.cc  nr.h  nrtypes.h  nrtypes_nr.h  nrutil.h  nrutil_nr.h  plgndr.cc  print_array.h  pythag.cc  spline.cc  splint.cc  svbksb.cc  svdcmp.cc  svdfit.cc  svdvar.cc  zbrac.cc  zbrak.cc  zbrent.cc
main/: Makefile.am  Makefile.in
main/fitters/: Makefile.am  Makefile.in  cofit.cc  covarprop.cc  fit.cc  readcovp.cc
main/formfac/: Makefile.am  Makefile.in  a0_2photon.axis2.xsl  a0_2photon.cc  a0_2photon.ini.xml  a0_photon_fit.cc  a0_photon_fit_cons.cc  baryon_matrix_elems.h  build_cache.cc  build_cache.ini.xml  build_currents.cc  build_currents.ini.xml  build_derivatives.cc  build_derivatives.ini.xml  complex_eigen_inverse.cc  current_ops.cc  current_ops.h  current_ops_factory.h  eigen_inverse.cc  ensem_matrix_elems.h  extract_Z_rho_mom  extract_matrix_Z  extract_matvec_Z  file_test.cc  file_test.ini.xml  make_mom_list.cc  matrix_elems.cc  matrix_elems.h  matrix_elems_factory.h  meson_3pt_fit_proj_snk.cc  meson_fit.cc  meson_insertion_ops.cc  meson_insertion_ops.h  meson_matrix_elems.cc  meson_matrix_elems.h  nucleon_ff.cc  nucleon_ff.ini.xml  operators.cc  operators.h  operators_factory.h  (+8 more)
main/fpi/: Makefile.am  (+3 more)
main/mres/: Makefile.am  Makefile.in  calc_Za.cc  mres.cc
main/spectrum/: Makefile.am  Makefile.in  jack_spectrum.cc  spectrum.cc  spectrum.xml  spectrum_db.cc  spectrum_db.xml
main/strippers/: Makefile.am  Makefile.in  displace_funcmap.cc  displace_funcmap.h  get_pions.cc  hadron_2pt.cc  hadron_2pt.h  hadron_contract.cc  hadron_contract.h  hadron_contract_aggregate.cc  hadron_contract_aggregate.h  hadron_contract_factory.h  simple_meson_2pt_w.cc  simple_meson_2pt_w.h  strip_bar3ptfn.cc  strip_buildingblocks.cc  strip_dwfloc.cc  strip_hadron_contract.cc  strip_hadspec.cc  strip_mesonspec.cc  strip_mres.cc  strip_mres4D.cc  strip_mresZa.cc  strip_nCG.cc  strip_npr_vertex.cc  strip_spectrum.cc  strip_spectrumOct.cc  strip_spectrumQll.cc  strip_staticlight.cc  strip_wallformfac.cc  strippers.h
main/utils/: Makefile.am  Makefile.in  average_cproplist.cc  average_proplist.cc  block_proplist.cc  cfold.cc  chop_proplist.cc  concat_and_scale_proplist.cc  concat_cproplist.cc  concat_proplist.cc  eff_ampl.cc  eff_mass.cc  fold.cc  jack_corrfunc_ratio.cc  jack_fit.cc  jack_fit.ini.xml  jack_ratio.cc  jack_ratio2.cc  merge_cproplists.cc  merge_proplists.cc  plot_prop.cc  shift_corrfunc.cc  time_reverse.cc
other_libs/: Makefile.am  Makefile.in
